@@ -3,6 +3,8 @@ version 2.2
 	Thank Hans Christian Saustrup for the suggestion.
 2. Support apr_shm_remove() in httpd.2.0.X
 	Thank Hans Christian Saustrup for bug report.
+3. Support configuration "TimeScore"
+	Thank Tim Jensen for the patch.
 
 version 2.1 ( Feb 15th 2007 )
 1. Add missing config.m4 and Makefile.in for static linking
